--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ header {
 }
 
 header img {
-    width: 150px;
-    height: 150px;
+    width: 175px;
+    height: 175px;
     border-radius: 50%;
     margin-bottom: 10px;
 }
@@ -20,13 +20,13 @@ section {
 }
 
 .project {
-    width: 200px; /* Square dimensions */
+    width: 200px; 
     height: 200px;
     border: 1px solid #ccc;
     margin: 10px;
-    display: inline-block; /* Aligns the containers side by side */
+    display: inline-block; 
     text-align: center;
-    line-height: 200px; /* Vertically centers the text */
+    line-height: 200px; 
 }
 
 h1, h2 {
@@ -34,7 +34,8 @@ h1, h2 {
 }
 
 #bio, #work {
-    background-color: #e9e9e9;
+    background-color: #b3b3b3;
+    text-align: center;
     padding: 15px;
 }
 
