--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 body {
     font-family: Georgia, serif;
+    background-image: url(https://images.unsplash.com/photo-1603979649806-5299879db16b?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bW91bnRhaW4lMjBsYWtlfGVufDB8fDB8fHww);
+    background-size: cover;
 }
 
 header {
     text-align: center;
     padding: 10px;
-    background-color: #f4f4f4;
 }
 
 header img {
@@ -49,13 +50,11 @@ h1, h2 {
 }
 
 #bio, #work {
-    background-color: #b3b3b3;
     text-align: center;
     padding: 15px;
 }
 
 footer {
-    background-color: #f4f4f4;
     text-align: center;
     padding: 10px;
 }
