--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Georgia, serif;
-    background-image: url(https://images.unsplash.com/photo-1603979649806-5299879db16b?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bW91bnRhaW4lMjBsYWtlfGVufDB8fDB8fHww);
+    background-image: url(https://images.unsplash.com/photo-1612198619563-a3a31fd47e6d?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8c3Vuc2V0JTIwY2xvdWR8ZW58MHx8MHx8fDA%3D);
     background-size: cover;
 }
 
